Archive2/cb/78e28c374e8570/output
main.cpp: In function 'int main()':
main.cpp:13:9: error: request for member 'f' is ambiguous
     C().f(0);
         ^
main.cpp:6:18: note: candidates are: void B::f(float)
  struct B { void f(float) { cout << "Ff" << endl; } };
                  ^
main.cpp:5:18: note:                 void A::f(int)
  struct A { void f(int) { cout << "Fi" << endl; } };
                  ^
